DTSPB-4264 add citizenHubResponse event